--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>PainApplication</title>
@@ -7,9 +8,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://kit.fontawesome.com/a5af307ce4.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
   <app-root></app-root>
   <script src="./assets/reimg.js"></script>
 </body>
+
 </html>
